--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write ./src"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
@@ -27,10 +28,15 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "10.4.20",
     "eslint": "^9.9.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "postcss": "8.4.44",
+    "prettier": "3.3.3",
+    "prettier-plugin-tailwindcss": "0.6.6",
     "tailwindcss": "3.4.10",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
