--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "format": "prettier --write ./src"
+    "format": "prettier --write ./src",
+    "prepare": "husky"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
@@ -21,6 +22,8 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@commitlint/cli": "19.4.1",
+    "@commitlint/config-conventional": "19.4.1",
     "@eslint/js": "^9.9.0",
     "@types/node": "22.5.2",
     "@types/react": "^18.3.3",
@@ -34,6 +37,8 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "husky": "9.1.5",
+    "lint-staged": "15.2.10",
     "postcss": "8.4.44",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "0.6.6",
@@ -41,5 +46,10 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
+  },
+  "lint-staged": {
+    "**/*.{tsx,ts}": [
+      "eslint --fix"
+    ]
   }
 }
