--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.438.0",
     "react": "^18.3.1",
+    "react-confetti-explosion": "2.1.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-router-dom": "6.26.1",
