chore: move frontend to client folder

--- a/client/tsconfig.node.json
+++ b/client/tsconfig.node.json
@@ -19,7 +19,7 @@
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["vite.config.ts"]
