--- a/package.json
+++ b/package.json
@@ -1,62 +1,23 @@
 {
   "name": "lucky-pick",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "format": "prettier --write ./src",
-    "prepare": "husky"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.438.0",
-    "react": "^18.3.1",
-    "react-confetti-explosion": "2.1.2",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.0",
-    "react-router-dom": "6.26.1",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint:staged": "pnpm --filter client lint:staged"
   },
   "devDependencies": {
     "@commitlint/cli": "19.4.1",
     "@commitlint/config-conventional": "19.4.1",
-    "@eslint/js": "^9.9.0",
-    "@types/node": "22.5.2",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "10.4.20",
-    "eslint": "^9.9.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-prettier": "5.2.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "husky": "9.1.5",
-    "lint-staged": "15.2.10",
-    "postcss": "8.4.44",
-    "prettier": "3.3.3",
-    "prettier-plugin-tailwindcss": "0.6.6",
-    "tailwindcss": "3.4.10",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "husky": "9.1.5"
   },
   "lint-staged": {
     "**/*.{tsx,ts}": [
       "eslint --fix"
     ]
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
