chore: add typescript as a dev dependency

--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "@types/express": "4.17.21",
     "@types/morgan": "1.9.9",
     "drizzle-kit": "0.24.2",
-    "ts-node-dev": "2.0.0"
+    "ts-node-dev": "2.0.0",
+    "typescript": "^5.5.3"
   }
 }
