--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint:staged": "pnpm --filter client lint:staged"
+    "lint:staged": "pnpm --filter client lint:staged",
+    "dev": "pnpm --filter client dev"
   },
   "devDependencies": {
     "@commitlint/cli": "19.4.1",
