--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "ts-node-dev ./src/index.ts",
     "build": "tsc",
-    "start": "node dist/src/index.js"
+    "start": "node dist/src/index.js",
+    "swagger": "ts-node-dev swagger.ts"
   },
   "keywords": [],
   "author": "",
@@ -19,13 +20,18 @@
     "express": "4.19.2",
     "morgan": "1.10.0",
     "nanoid": "3.3.4",
+    "swagger-autogen": "2.23.7",
+    "swagger-jsdoc": "^6.2.8",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
     "@types/morgan": "1.9.9",
+    "@types/swagger-jsdoc": "6.0.4",
+    "@types/swagger-ui-express": "4.1.6",
     "drizzle-kit": "0.24.2",
+    "swagger-ui-express": "5.0.1",
     "ts-node-dev": "2.0.0",
     "typescript": "^5.5.3"
   }
