--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,15 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev ./src/index.ts",
     "build": "tsc",
-    "start": "node dist/src/index.js"
+    "start": "node dist/src/index.js",
+    "lint": "eslint .",
+    "lint:fix": "npx eslint --fix ."
   },
   "keywords": [],
   "author": "",
@@ -29,11 +32,20 @@
     "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
     "@types/morgan": "1.9.9",
+    "@types/node": "22.5.2",
     "@types/swagger-jsdoc": "6.0.4",
     "@types/swagger-ui-express": "4.1.6",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
     "drizzle-kit": "0.24.2",
+    "eslint": "^8.57.0",
+    "eslint-config-love": "64.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "globals": "^15.0.0",
     "swagger-ui-express": "5.0.1",
     "ts-node-dev": "2.0.0",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^7.6.0"
   }
 }
