--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,13 +2,23 @@
   "compilerOptions": {
     "target": "es2016",
     "module": "commonjs",
-    // "baseUrl": "./",
-    // "paths": {},
+    "baseUrl": "src",
+    "paths": {
+      "@/*": ["*"],
+      "@router": ["router/index.ts"],
+      "@lib/*": ["lib/*"],
+      "@repository/*": ["repository/*"],
+      "@config/*": ["config/*"],
+      "@middlewares/*": ["middlewares/*"],
+      "@dtos": ["dtos/index.ts"]
+    },
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
     "outDir": "dist",
     "resolveJsonModule": true
-  }
+  },
+  "exclude": ["node_modules/", "dist"],
+  "include": ["src/**/*"]
 }
