--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,15 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "type": "module",
+  "type": "commonjs",
   "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev ./src/index.ts",
     "build": "tsc",
     "start": "node dist/src/index.js",
-    "lint": "eslint .",
-    "lint:fix": "npx eslint --fix ."
+    "lint": "eslint src/**/*.ts --fix",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -35,14 +35,17 @@
     "@types/node": "22.5.2",
     "@types/swagger-jsdoc": "6.0.4",
     "@types/swagger-ui-express": "4.1.6",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "8.4.0",
     "drizzle-kit": "0.24.2",
     "eslint": "^8.57.0",
     "eslint-config-love": "64.0.0",
+    "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "globals": "^15.0.0",
+    "prettier": "3.3.3",
     "swagger-ui-express": "5.0.1",
     "ts-node-dev": "2.0.0",
     "typescript": "^5.5.3",
