--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,14 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "type": "commonjs",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev ./src/index.ts",
     "build": "tsc",
     "start": "node dist/src/index.js",
-    "lint": "eslint src/**/*.ts --fix",
+    "lint": "eslint .",
     "format": "prettier --write ."
   },
   "keywords": [],
@@ -29,6 +29,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
     "@types/morgan": "1.9.9",
@@ -39,11 +40,10 @@
     "@typescript-eslint/parser": "8.4.0",
     "drizzle-kit": "0.24.2",
     "eslint": "^8.57.0",
-    "eslint-config-love": "64.0.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-prettier": "5.2.1",
     "globals": "^15.0.0",
     "prettier": "3.3.3",
     "swagger-ui-express": "5.0.1",
