chore: refine tsconfig

--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,14 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "type": "module",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev ./src/index.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register ./src/index.ts",
     "build": "tsc",
     "start": "node dist/src/index.js",
     "lint": "eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "lint:staged": "npx lint-staged"
   },
   "keywords": [],
   "author": "",
@@ -45,10 +44,17 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "5.2.1",
     "globals": "^15.0.0",
+    "lint-staged": "15.2.10",
     "prettier": "3.3.3",
     "swagger-ui-express": "5.0.1",
     "ts-node-dev": "2.0.0",
+    "tsconfig-paths": "4.2.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^7.6.0"
+  },
+  "lint-staged": {
+    "**/*.ts": [
+      "eslint --fix"
+    ]
   }
 }
