chore: integrate react query with trpc

--- a/packages/client/tsconfig.node.json
+++ b/packages/client/tsconfig.node.json
@@ -22,5 +22,10 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts"],
+  "references": [
+    {
+      "path": "../server"
+    }
+  ]
 }
