--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -4,8 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "demo": "vite",
+    "dev": "VITE_BACKEND=TRUE vite",
+    "ts:check": "tsc .b",
+    "build": "pnpm ts:check && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "format": "prettier --write ./src",
@@ -16,7 +18,9 @@
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/react-label": "2.1.0",
     "@radix-ui/react-slot": "1.1.0",
+    "@tanstack/react-query": "4",
     "@trpc/client": "10.45.2",
+    "@trpc/react-query": "10.45.2",
     "@trpc/server": "10.45.2",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
