--- a/packages/client/tsconfig.app.json
+++ b/packages/client/tsconfig.app.json
@@ -24,5 +24,10 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src"],
+  "references": [
+    {
+      "path": "../server"
+    }
+  ]
 }
