--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -20,7 +20,10 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "composite": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true
   },
   "exclude": ["node_modules/", "dist"],
   "include": ["src/**/*"]
