feat: make mutation function logic

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -26,5 +26,5 @@
     "noUnusedParameters": true
   },
   "exclude": ["node_modules/", "dist"],
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "drizzle/**/*"]
 }
