--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register ./src/index.ts",
-    "build": "tsc && tsc-alias -p tsconfig.json",
+    "build": "tsc -b && tsc-alias -p tsconfig.json",
     "start": "node dist/src/index.js",
     "lint": "eslint .",
     "format": "prettier --write .",
@@ -47,10 +47,11 @@
     "lint-staged": "15.2.10",
     "prettier": "3.3.3",
     "swagger-ui-express": "5.0.1",
+    "ts-node": "10.9.2",
     "ts-node-dev": "2.0.0",
     "tsc-alias": "1.8.10",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^5.5.3",
+    "typescript": "5.4.5",
     "typescript-eslint": "^7.6.0"
   },
   "lint-staged": {
