--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,27 +1,27 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "ES2017",
     "module": "CommonJS",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
-    "baseUrl": "src",
     "allowJs": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["*"],
-      "@router": ["router/index.ts"],
-      "@lib/*": ["lib/*"],
-      "@repository/*": ["repository/*"],
-      "@config/*": ["config/*"],
-      "@middlewares/*": ["middlewares/*"],
-      "@dtos": ["dtos/index.ts"]
+      "@/*": ["src/*"],
+      "@router": ["src/router/index.ts"],
+      "@lib/*": ["src/lib/*"],
+      "@repository/*": ["src/repository/*"],
+      "@config/*": ["src/config/*"],
+      "@middlewares/*": ["src/middlewares/*"],
+      "@dtos": ["src/dtos/index.ts"]
     },
-    "types": ["node", "express"],
+    "types": ["node"],
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "outDir": "dist",
-    "composite": true,
+    "outDir": "./dist",
+
     "noUnusedLocals": true,
     "noUnusedParameters": true
   },
