--- a/packages/server/vercel.json
+++ b/packages/server/vercel.json
@@ -1,1 +1,1 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/src/server" }] }
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/src/app" }] }
