--- a/packages/server/vercel.json
+++ b/packages/server/vercel.json
@@ -1,15 +1,4 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "src/app.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "src/app.js"
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/src/app" }]
 }
