--- a/packages/server/vercel.json
+++ b/packages/server/vercel.json
@@ -1,4 +1,1 @@
-{
-  "version": 2,
-  "rewrites": [{ "source": "/(.*)", "destination": "/src/app" }]
-}
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
