--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "ts-node-dev -r tsconfig-paths/register ./src/index.ts",
-    "build": "tsc -b && tsc-alias -p tsconfig.json",
+    "dev": "ts-node-dev -r tsconfig-paths/register ./api/index.ts",
+    "build": "tsc && tsc-alias -p tsconfig.json",
     "start": "node dist/src/index.js",
     "lint": "eslint .",
     "format": "prettier --write .",
@@ -52,8 +52,7 @@
     "tsc-alias": "1.8.10",
     "tsconfig-paths": "4.2.0",
     "typescript": "5.4.5",
-    "typescript-eslint": "^7.6.0",
-    "vercel": "37.4.0"
+    "typescript-eslint": "^7.6.0"
   },
   "lint-staged": {
     "**/*.ts": [
