--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register ./api/index.ts",
     "build": "tsc && tsc-alias -p tsconfig.json",
-    "start": "node dist/src/index.js",
+    "start": "node dist/api/index.js",
     "lint": "eslint .",
     "format": "prettier --write .",
     "lint:staged": "npx lint-staged"
