--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register ./api/index.ts",
-    "build": "tsc && tsc-alias -p tsconfig.json",
+    "build": "tsc && tsc-alias -p tsconfig.json && cp -a public ./dist",
     "start": "node dist/api/index.js",
     "lint": "eslint .",
     "format": "prettier --write .",
