--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "ts-node-dev -r tsconfig-paths/register ./api/index.ts",
-    "build": "tsc && tsc-alias -p tsconfig.json && cp -a public ./dist",
+    "dev": "ts-node-dev ./api/index.ts",
+    "build": "tsc && cp -a public ./dist",
     "start": "node dist/api/index.js",
     "lint": "eslint .",
     "format": "prettier --write .",
@@ -49,8 +49,6 @@
     "swagger-ui-express": "5.0.1",
     "ts-node": "10.9.2",
     "ts-node-dev": "2.0.0",
-    "tsc-alias": "1.8.10",
-    "tsconfig-paths": "4.2.0",
     "typescript": "5.4.5",
     "typescript-eslint": "^7.6.0"
   },
