--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -20,6 +20,8 @@
     "dotenv": "16.4.5",
     "drizzle-orm": "0.33.0",
     "express": "4.19.2",
+    "http-status-codes": "2.3.0",
+    "jsonwebtoken": "9.0.2",
     "morgan": "1.10.0",
     "nanoid": "3.3.4",
     "swagger-autogen": "2.23.7",
@@ -31,6 +33,7 @@
     "@eslint/js": "^9.9.0",
     "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
+    "@types/jsonwebtoken": "9.0.6",
     "@types/morgan": "1.9.9",
     "@types/node": "22.5.2",
     "@types/swagger-jsdoc": "6.0.4",
