--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -26,9 +26,7 @@
     "jsonwebtoken": "9.0.2",
     "morgan": "1.10.0",
     "nanoid": "3.3.4",
-    "swagger-autogen": "2.23.7",
-    "swagger-jsdoc": "^6.2.8",
-    "trpc-openapi": "1.2.0",
+    "trpc-panel": "1.3.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -38,8 +36,6 @@
     "@types/jsonwebtoken": "9.0.6",
     "@types/morgan": "1.9.9",
     "@types/node": "22.5.2",
-    "@types/swagger-jsdoc": "6.0.4",
-    "@types/swagger-ui-express": "4.1.6",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "8.4.0",
     "drizzle-kit": "0.24.2",
@@ -51,7 +47,6 @@
     "globals": "^15.0.0",
     "lint-staged": "15.2.10",
     "prettier": "3.3.3",
-    "swagger-ui-express": "5.0.1",
     "ts-node": "10.9.2",
     "ts-node-dev": "2.0.0",
     "typescript": "5.4.5",
