--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -18,6 +18,7 @@
     "@trpc/server": "10.45.2",
     "@types/bcrypt": "5.0.2",
     "bcrypt": "5.1.1",
+    "cookie-parser": "1.4.6",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
     "drizzle-orm": "0.33.0",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/cookie-parser": "1.4.7",
     "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
     "@types/jsonwebtoken": "9.0.6",
